// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultTab /> renders correctly 1`] = `
<Loading
  key="progress"
  text="Creation of VM in progress"
/>
`;

exports[`<ResultTab /> renders correctly 2`] = `
<div
  className="wizard-pf-complete blank-slate-pf"
  key="success"
>
  <div
    className="wizard-pf-success-icon"
  >
    <span
      className="pficon pficon-error-circle-o"
    />
  </div>
  <h3
    className="blank-slate-pf-main-action"
  >
    Creation of VM failed
  </h3>
  Error
</div>
`;

exports[`<ResultTab /> renders correctly 3`] = `
<div
  className="wizard-pf-complete blank-slate-pf"
  key="success"
>
  <div
    className="wizard-pf-success-icon"
  >
    <span
      className="pficon pficon-ok"
    />
  </div>
  <h3
    className="blank-slate-pf-main-action"
  >
    Creation of VM was successful
  </h3>
  Result
</div>
`;
